# dmr-bridge-discord

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  index.js  package.json
.github/workflows/: npm-publish.yml  release.yml
analog/: converter.js  index.js  receiver.js  transmitter.js
commands/basic/: connect.js  disconnect.js
helpers/: logger.js
src/: commands.rs  handler.rs  lib.rs  main.rs  packet.rs
src/basic/: connect.js  disconnect.js
src/commands/: receiver.rs  transmitter.rs
