[package]
name = "dmr-bridge-discord-rust"
version = "0.1.0"
authors = ["Alexandre Monier <alexandre.monierc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version = "*", features = ["jack"] }
songbird = "0.2"
serenity = { version = "0.10", features = [ "voice" ]}
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dotenv = "0.15.0"
byteorder = "1"
