[package]
name = "dmr-bridge-discord"
version = "0.1.2"
authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>", "Jessy SOBREIRO <jessy.sobreiro@gmail.com>"]
keywords = ["dmr", "analog-bridge", "usrp", "discord"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
description = "Bridge a DMR network with a Discord voice channel"
repository = "https://github.com/jess-sys/dmr-bridge-discord.git"
homepage = "https://github.com/jess-sys/dmr-bridge-discord"
documentation = "https://github.com/jess-sys/dmr-bridge-discord/README.md"
categories = ["command-line-utilities", "multimedia::audio", "network-programming"]

[dependencies]
# cpal = { version = "*", features = ["jack"] } will be used in future versions
dasp_signal = { version = "0.11.0" }
dasp_interpolate = { version = "0.11.0", features = ["linear"]}
songbird = "0.3.2"
serenity = { version = "0.11.5", features = [ "voice" ]}
tokio = { version = "1.28.0", features = ["full"] }
chrono = "0.4.24"
dotenv = "0.15.0"
byteorder = "1.4.3"
